# act-sdk-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  context7.json  prek.toml  wkg-registry.toml
.github/workflows/: ci.yml  publish.yml
act-sdk/: Cargo.toml
act-sdk-macros/: Cargo.toml
act-sdk-macros/src/: component.rs  lib.rs  manifest.rs  skill.rs  tool.rs
act-sdk/src/: bytes.rs  cbor.rs  context.rs  lib.rs  response.rs  sessions.rs  types.rs
act-types/: Cargo.toml
act-types/src/: capability.rs  cbor.rs  constants.rs  http.rs  jsonrpc.rs  lib.rs  mcp.rs  types.rs
docs/plans/: 2026-03-09-act-sdk-design.md  2026-03-09-act-sdk-plan.md
docs/superpowers/plans/: 2026-03-15-v0.2.0-spec-update.md
examples/config-sdk/: Cargo.toml
examples/config-sdk/src/: lib.rs
examples/counter/: Cargo.toml  counter.wasm
examples/counter/src/: lib.rs
examples/hello-sdk/: Cargo.toml
examples/hello-sdk/src/: lib.rs
examples/hello-world/: Cargo.toml  hello-world.wasm
examples/hello-world/src/: lib.rs
examples/http-client/: Cargo.toml  http-client.wasm  rust-toolchain.toml
examples/http-client-sdk/: Cargo.toml
examples/http-client-sdk/src/: lib.rs
examples/http-client/src/: lib.rs
examples/sessions-counter/: Cargo.toml
examples/sessions-counter/src/: lib.rs
wit/: world.wit
