[workspace]
members = [
    "act-types",
    "act-sdk",
    "act-sdk-macros",
    "examples/*",
]
resolver = "3"

[workspace.dependencies]
act-types = { version = "0.4", path = "act-types" }
act-sdk-macros = { version = "0.4", path = "act-sdk-macros" }

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actcore/act-sdk-rs"
homepage = "https://actcore.dev"
