[package]
name = "act-sdk-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for the ACT SDK (#[act_component], #[act_tool])"
keywords = ["act", "wasm", "component-model", "proc-macro"]
categories = ["wasm", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
