[package]
name = "act-sdk-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for the ACT SDK (#[act_component], #[act_tool])"
readme = "../README.md"
keywords = ["act", "wasm", "component-model", "proc-macro"]
categories = ["wasm", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
act-types = { version = "0.2.4", path = "../act-types" }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
toml = "0.8"
