[package]
name = "act-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust SDK for building ACT (Agent Component Tools) WebAssembly components"
readme = "../README.md"
keywords = ["act", "wasm", "component-model", "mcp", "sdk"]
categories = ["wasm", "development-tools"]

[dependencies]
act-sdk-macros = { version = "0.2.4", path = "../act-sdk-macros" }
act-types = { version = "0.2.4", path = "../act-types" }
wit-bindgen = { version = "0.53", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
