[package]
name = "act-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types and CBOR utilities for the ACT (Agent Component Tools) protocol"
keywords = ["act", "wasm", "component-model", "mcp", "tools"]
categories = ["wasm", "encoding", "development-tools"]

[dependencies]
base64 = "0.22.1"
ciborium = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3", features = ["base64"] }
