[package]
name = "hello-sdk"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
act-sdk = { path = "../../act-sdk" }
wit-bindgen = { version = "0.54", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"

[lib]
crate-type = ["cdylib"]
