[package]
name = "http-client-sdk"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
act-sdk = { path = "../../act-sdk" }
wit-bindgen = { version = "0.53", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
url = "2"
wasip3 = "0.4"

[lib]
crate-type = ["cdylib"]
