[package]
name = "http-client"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
wit-bindgen = { version = "0.57", features = ["async-spawn"] }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
wasip3 = "0.4"

[lib]
crate-type = ["cdylib"]
